--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,10 +1,12 @@
-<h1 class="title" >Поиск картинок</h1>
+ <section class="section">
+ <h1 class="title" >Поиск картинок</h1>
 <form class="search-form" id="search-form">
   <input class="input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
-  <button class="search-btn" type="submit">Search</button>
+  <button class="btn search-btn" type="submit">Search</button>
 </form>
 
 
 <ul class="wrapper list"></ul>
 
-<button class="load-more-btn" type="button">Load more</button>
+<button class="btn load-more-btn visually-hidden" type="button">Load more</button>
+</section>
