--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,32 +1,13 @@
-// .example {
-//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-//     'Open Sans', 'Helvetica Neue', sans-serif;
-//   line-height: 1.5;
-//   background-color: #fff;
-//   color: #424242;
-//   max-width: 960px;
-//   padding: 16px;
-// }
-
-// .example code {
-//   font-family: monospace;
-//   font-size: 16px;
-//   font-weight: 700;
-//   background-color: #009688;
-//   color: #fff;
-//   padding: 2px 6px;
-//   border-radius: 2px;
-// }
-
-// .example .background {
-//   height: 240px;
-//   // Путь к изображениям из SASS-файла всегда такой, как из папки css
-//   background-image: url('../images/demo.jpg');
-//   background-size: cover;
-//   background-position: center;
-// }
 body {
-  position: relative;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(236, 68, 228, 0.314) 35.5%,
+    rgba(197, 78, 206, 0.466) 64.5%
+  );
+}
+
+.list {
+  list-style: none;
 }
 
 img {
@@ -34,23 +15,85 @@ img {
   height: 290px;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.btn {
+  display: block;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  text-align: center;
+  letter-spacing: 0.06em;
+  width: 200px;
+  height: 50px;
+  color: rgb(87, 6, 80);
+  background: violet;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.section {
+  margin: 0 auto;
+}
+
 .title {
   display: block;
   text-align: center;
+  color: rgb(101, 14, 104);
+  margin-bottom: 30px;
 }
 
 .search-form {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
-.load-more-btn {
-  text-align: center;
-  margin: 0 auto;
+.input {
+  display: block;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  width: 300px;
+  height: 50px;
+  padding: 15px;
+  color: rgb(87, 6, 80);
+  background-color: violet;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(184, 116, 161, 0.15));
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input:focus {
+  outline: none;
+  border-color: rgb(59, 6, 52);
 }
 
-.list {
-  list-style: none;
+.input::placeholder {
+  display: inline-block;
+  color: rgba(59, 5, 52, 0.6);
+}
+
+.search-btn:hover,
+.search-btn:focus {
+  background-color: rgb(182, 56, 182);
 }
 
 .wrapper {
@@ -71,4 +114,28 @@ img {
 
 .stats {
   display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.stats-item {
+  font-weight: 900;
+  color: rgb(80, 23, 85);
+}
+
+.material-icons {
+  font-size: 30px;
+  color: rgb(59, 9, 78);
+}
+
+.load-more-btn {
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.load-more-btn:hover,
+.load-more-btn:focus {
+  background-color: rgb(180, 50, 180);
 }
