--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -4,9 +4,13 @@
   <input class="input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
   <button class="btn search-btn" type="submit">Search</button>
 </form>
-
-
 <ul class="wrapper list"></ul>
-
 <button class="btn load-more-btn visually-hidden" type="button">Load more</button>
 </section>
+
+<div class="backdrop visually-hidden">
+  <div class="modal">
+    <img src="" alt="">
+  </div>
+  <button class="modal-close-btn">close</button>
+</div>
