--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,4 +1,5 @@
 body {
+  position: relative;
   background-image: linear-gradient(
     to bottom,
     rgba(236, 68, 228, 0.314) 35.5%,
@@ -9,10 +10,13 @@ body {
 .list {
   list-style: none;
 }
+.link {
+  text-decoration: none;
+}
 
 img {
   width: 100%;
-  height: 290px;
+  height: auto;
 }
 
 .visually-hidden {
@@ -112,12 +116,29 @@ img {
   margin-right: 30px;
 }
 
+.card-img {
+  height: 290px;
+}
+
 .stats {
   display: flex;
   width: 100%;
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+}
+
+.link-photo-card {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
+.photo-card:focus,
+.photo-card:hover {
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(138, 9, 99, 0.12), 0px 4px 4px rgba(170, 8, 148, 0.06),
+    1px 4px 6px rgba(104, 12, 88, 0.16);
 }
 
 .stats-item {
@@ -138,4 +159,36 @@ img {
 .load-more-btn:hover,
 .load-more-btn:focus {
   background-color: rgb(180, 50, 180);
+}
+
+///////modal/////
+
+.backdrop {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  visibility: visible;
+
+  //transition: opacity var(--transition), visibility var(--transition)
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  background-color: aquamarine;
+  width: 100%;
+  max-width: 1100px;
+  height: 95%;
+  max-height: 609px;
+  margin-left: 0;
+  margin-right: 0;
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
