--- a/src/templates/galery.hbs
+++ b/src/templates/galery.hbs
@@ -2,7 +2,7 @@
 {{#each hits}}
 <li class="wrapper-item">
 <div class="photo-card">
-    <img src="{{webformatURL}}" alt="{{tags}}"/>
+    <img class="card-img" src="{{webformatURL}}" alt="{{tags}}"/>
     <div class="stats">
         <p class="stats-item">
             <i class="material-icons">thumb_up</i>
@@ -22,5 +22,6 @@
         </p>
     </div>
 </div>
+
 </li>
 {{/each}}
